<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">
    
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_photo"
        android:layout_width="104dp"
        android:layout_height="104dp"
        android:layout_margin="36dp"
        android:src="@drawable/ic_proicons_person_24dp"
        app:civ_border_width="1dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/toggle_notification" />

    <TableLayout
        android:id="@+id/table_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        app:layout_constraintStart_toEndOf="@id/profile_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/profile_photo"
        app:layout_constraintBottom_toBottomOf="@id/profile_photo">

        <TextView
            android:text="@string/profile_name"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:text="@string/profile_email"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:text="@string/profile_motivation" />
    </TableLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/toggle_notification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btn_notification"
        android:drawableTint="?attr/colorPrimary"
        android:drawableStart="@drawable/ic_f7_bell_circle_24dp"
        android:drawablePadding="12dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_photo"
        app:layout_constraintStart_toStartOf="@id/profile_photo"
        app:layout_constraintEnd_toEndOf="@id/table_desc" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/toggle_darkMode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_darkMode"
        android:drawableTint="?attr/colorPrimary"
        android:drawableStart="@drawable/ic_f7_moon_circle_24dp"
        android:drawablePadding="12sp"
        app:layout_constraintTop_toBottomOf="@+id/toggle_notification"
        app:layout_constraintStart_toStartOf="@id/toggle_notification"
        app:layout_constraintEnd_toEndOf="@id/toggle_notification" />

    <TextView
        android:id="@+id/btn_logOut"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="4dp"
        android:gravity="center_vertical"
        android:textColor="?attr/colorOnBackground"
        android:background="?attr/selectableItemBackground"
        android:text="@string/btn_logOut"
        android:clickable="true"
        android:focusable="true"
        android:drawablePadding="12dp"
        app:drawableStartCompat="@drawable/ic_f7_arrow_circle_24dp"
        app:drawableTint="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/toggle_darkMode"
        app:layout_constraintStart_toStartOf="@id/toggle_darkMode"
        app:layout_constraintEnd_toEndOf="@id/toggle_darkMode"/>

    <TextView
        android:id="@+id/btn_deleteAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="start"
        android:text="@string/Btn_deleteAccount"
        android:textColor="?attr/colorError"
        app:layout_constraintStart_toStartOf="@id/btn_logOut"
        app:layout_constraintTop_toBottomOf="@+id/btn_logOut"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/text_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>