<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="10dp"
    android:layout_marginHorizontal="8dp"
    android:layout_gravity="center"
    android:id="@+id/item_state_card"
    app:cardCornerRadius="16dp"
    app:cardBackgroundColor="?attr/colorPrimary"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/item_stock_photo"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars"
            app:riv_corner_radius="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:adjustViewBounds="true" />

        <TextView
            android:id="@+id/item_stock_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/txt_nameStock"
            android:textStyle="bold"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintStart_toEndOf="@+id/item_stock_photo"
            app:layout_constraintTop_toTopOf="@id/item_stock_photo"
            app:layout_constraintEnd_toStartOf="@id/item_stock_edit" />

        <TableRow
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/item_stock_expired"
            app:layout_constraintStart_toStartOf="@id/item_stock_name">

            <TextView
                android:text="@string/txt_inStock"
                android:textColor="?attr/colorOnSurface"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:id="@+id/item_stock_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_amountStock"
                android:textColor="?attr/colorOnSurface"/>
        </TableRow>

        <TextView
            android:id="@+id/item_stock_expired"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_expiredStock"
            android:textColor="?attr/colorError"
            app:layout_constraintStart_toStartOf="@id/item_stock_name"
            app:layout_constraintEnd_toEndOf="@id/item_stock_name"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageButton
            android:id="@+id/item_stock_edit"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/btn_editStock"
            android:padding="8dp"
            android:src="@drawable/ic_proicons_compose_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorOnPrimary"
            tools:ignore="TouchTargetSizeCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>